# xqdata

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  ddbimage.sh  deploy_ddb.sh  devcontainer.json  docker-compose.yaml
.github/workflows/: pypi-publish.yaml
src/xqdata/: __init__.py  dataapi.py
src/xqdata/ddb/: api.py  utils.py
src/xqdata/mock/: __init__.py
src/xqdata/rq/: __init__.py  api.py  config.py  func.py  func_factor.py  func_info.py  utils.py
test/: test_mock.py  test_rqdata.py  test_rqdata_factor.py  test_rqdata_info.py
