[project]
name = "xqdata"
dynamic = ["version"]
description = "统一适配rqdata/火富牛API等数据源"
readme = "README.md"
authors = [
    { name = "xuanq", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]


[project.scripts]
xqdata = "xqdata:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/xqdata/_version.py"
template = '''
version = "{version}"
'''

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

