[project]
name = "xqdata"
version = "0.2.0rc2"
description = "统一适配rqdata/火富牛API等数据源"
readme = "README.md"
authors = [
    { name = "xuanq", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]


[project.scripts]
xqdata = "xqdata:main"

[project.optional-dependencies]
rq = [
    "rqdatac>=3.3.2",
]
ddb = [
    "ddbtools>=0.1.14",
    "dolphindb>=3.0.4.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
